# rvv-mlir

./: CMakeLists.txt  flake.nix
doc/: mapping.typ  operand-attribute-design.md  rational.typ  riscv_vector.td
include/RVV/: CMakeLists.txt  RVV.td  RVVAttributes.h  RVVAttributes.td  RVVDialect.h  RVVDialect.td  RVVFloatOps.td  RVVIntegerOps.td  RVVInterfaces.h  RVVInterfaces.td  RVVMemoryOps.td  RVVOps.h  RVVOps.td  RVVPasses.h  RVVPasses.td  RVVTypes.h  RVVTypes.td
lib/: CMakeLists.txt
lib/RVV/: CMakeLists.txt  RVVAttributes.cpp  RVVDialect.cpp  RVVInterfaces.cpp  RVVOps.cpp  RVVToEmitC.cpp  RVVTypes.cpp
nix/: overlay.nix
nix/pkgs/: rvv-mlir.nix
rvv-opt/: CMakeLists.txt  rvv-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
